Added frontend folder

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,23 +2,17 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>307 Принтер</title>
 
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/normalize.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/start.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/exotwo.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/main2.css'>
+    <link rel="stylesheet" type="text/css" media="screen" href="main-css.css">
 </head>
 
 <body>
     {{{ body }}}
-
-    <script async src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script async src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
 </body>
 
 </html>
