--- a/views/register.hbs
+++ b/views/register.hbs
@@ -25,4 +25,4 @@
 
 <div id="notification" class="notification-block"></div>
 
-<script async src="/scripts/register.js"></script>
+<script async src="/register.js"></script>
