--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,11 +11,14 @@
 
         <h1 class="title">Вход</h1>
 
-        <form action="" class="form">
+        <form action="" class="form" id="form">
             <input type="text" name="username" placeholder="Имя пользователя" class="text-input">
             <input type="password" name="password" placeholder="Пароль" class="text-input">
-            <button type="submit" class="main-button button">Войти</button>
+            <button type="submit" class="main-button button" id="submit-button">Войти</button>
             <a href="/register" class="transparent-button button">Зарегистрироваться</a>
         </form>
     </div>
 </main>
+
+
+<script async src="/login.js"></script>
