--- a/views/account.hbs
+++ b/views/account.hbs
@@ -44,8 +44,8 @@
                     {{#each orders}}
                     <tr>
                         <td>{{this.id}}</td>
-                        <td>{{this.name}}</td>
-                        <td>{{this.date}}</td>
+                        <td>{{this.originalName}}</td>
+                        <td>{{this.createDate}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
