--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
 
     <title>307 Принтер</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="main-css.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/main-css.css">
 </head>
 
 <body>
