--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import "./normalize.scss";
 @import "./exotwo.scss";
 @import "./start.scss";
+@import "./input.scss";
+@import "./button.scss";
 
 body {
     position: relative;
@@ -160,80 +162,11 @@ body {
 
 /* Text Input */
 .text-input {
-    display: block;
-    width: 100%;
-    padding: 10px 16px;
-    border: 1px solid #dadada;
-    border-radius: 0.25rem;
-    font-size: 14px;
-    transition: 0.3s;
-
-    &:focus {
-        outline: none;
-        border: 1px solid #4d34ff;
-    }
-
-    &::placeholder {
-        font-weight: bold;
-        font-size: 12px;
-        text-transform: uppercase;
-        color: #888888;
-    }
+    @include text-input;
 }
 
 .text-input__error {
-    background-color: rgba(240, 128, 128, 0.8);
-    border: 1px solid lightcoral;
-
-    &:focus {
-        border: 1px solid crimson;
-    }
-
-    &::placeholder {
-        color: #ffffff;
-    }
-}
-
-/* Button */
-.button {
-    width: 100%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    padding: 16px 32px;
-    border-radius: 0.25rem;
-
-    cursor: pointer;
-
-    font-weight: 700;
-
-    transition: 0.3s;
-}
-
-/* Main button */
-.main-button {
-    color: #ffffff;
-    background-color: #00a5f1;
-    border: 1px solid #00a5f1;
-
-    &:hover {
-        background-color: #008bcd;
-        border: 1px solid #00a5f1;
-    }
-}
-
-/* Transparent button */
-.transparent-button {
-    font-weight: normal;
-    color: #007bff;
-    background-color: transparent;
-    border: 1px solid transparent;
-
-    &:hover {
-        color: #c6ddf5;
-    }
+    @include text-input__error;
 }
 
 /* Header */
@@ -339,6 +272,55 @@ table {
                 text-align: left;
             }
         }
+    }
+
+    a {
+        color: #00a5f1;
+    }
+}
+
+.input-block__text__with-label,
+.input-block__checkbox__with-label {
+    margin-bottom: 8px;
+}
+
+.input-block__text__with-label {
+    input,
+    label {
+        display: block;
+    }
+
+    input {
+        @include text-input;
+    }
+
+    label {
+        margin-bottom: 4px;
+    }
+}
+
+.input-block__checkbox__with-label {
+    display: flex;
+    align-items: center;
+
+    input {
+        width: auto;
+    }
+
+    label {
+        margin-right: 8px;
+    }
+}
+
+.buttons-block {
+    display: flex;
+    margin-bottom: 20px;
+
+    button {
+        width: auto;
+        font-weight: normal;
+        padding: 10px 20px;
+        margin-right: 12px;
     }
 }
 
