Added admin guard

--- a/views/admin/admin-user.hbs
+++ b/views/admin/admin-user.hbs
@@ -40,7 +40,7 @@
 
                 <div class="buttons-block">
                     <button type="button" class="green-button" id="update-button">Обновить</button>
-                    <button type="button" class="red-button" id="delete-button">Удалить</button>
+                    {{!-- <button type="button" class="red-button" id="delete-button">Удалить</button> --}}
                 </div>
             </form>
 
