--- a/views/admin/admin.hbs
+++ b/views/admin/admin.hbs
@@ -16,7 +16,7 @@
             <h2 class="title">Таблицы:</h2>
 
             {{#each tables}}
-            <a href="{{this.url}}">{{this.name}}</a>
+            <a href="{{this.url}}" class="admin-main__table-link">{{this.name}}</a>
             {{/each}}
         </main>
     </div>
