--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -16,6 +16,15 @@ body {
     /* color: #007bff; */
 }
 
+a {
+    color: #00a5f1;
+    transition: 0.3s;
+
+    &:hover {
+        color: #1c00ec;
+    }
+}
+
 /* Auth Page */
 .auth-page {
     width: 100%;
@@ -68,7 +77,7 @@ body {
 .title {
     text-align: center;
     font-size: 1.8em;
-    font-weight: 300;
+    // font-weight: 300;
     color: #1c00ec;
     padding: 20px 0;
 }
@@ -231,14 +240,6 @@ table {
         margin: 0;
         padding: 0;
         border: 0;
-
-        a {
-            transition: 0.3s;
-
-            &:hover {
-                color: #1c00ec;
-            }
-        }
     }
 }
 
@@ -249,13 +250,9 @@ table {
     border-radius: 0.25rem;
 
     .title {
-        padding-left: 8px;
-        padding-right: 8px;
-
         text-align: left;
         color: #000000;
         font-size: 1.5em;
-        font-weight: 300;
     }
 
     table {
@@ -272,10 +269,6 @@ table {
                 text-align: left;
             }
         }
-    }
-
-    a {
-        color: #00a5f1;
     }
 }
 
@@ -314,14 +307,6 @@ table {
 
 .buttons-block {
     display: flex;
-    margin-bottom: 20px;
-
-    button {
-        width: auto;
-        font-weight: normal;
-        padding: 10px 20px;
-        margin-right: 12px;
-    }
 }
 
 /* Notification block */
@@ -351,4 +336,66 @@ table {
     visibility: visible;
     opacity: 1;
     transition: visibility 0s ease-in-out 0s, opacity 0.3s ease-in-out 0s;
+}
+
+.admin-main__table-link {
+    display: block;
+    border-bottom: 1px solid #dee2e6;
+    padding: 8px 12px;
+}
+
+.main__navigation {
+    margin: 20px 0 0;
+
+    .main__navigation-list {
+        margin: 0;
+        padding: 0 8px;
+        display: flex;
+        align-items: center;
+
+        li {
+            display: flex;
+            align-items: center;
+
+            &::after {
+                content: "|";
+                display: block;
+                margin: 0 12px;
+            }
+
+            &:last-child::after {
+                display: none;
+            }
+        }
+    }
+}
+
+.admin__statistic-block {
+    margin: 10px 0;
+    padding: 10px 0;
+    border-top: 1px solid #dee2e6;
+
+    h3 {
+        margin-bottom: 12px;
+    }
+
+    span {
+        color: #00a5f1;
+    }
+
+    .admin__statistic-date-form {
+        h4 {
+            margin: 8px 0;
+        }
+
+        .admin__statistic-date-form__input-block {
+            display: flex;
+            align-items: center;
+            margin-bottom: 8px;
+
+            label {
+                margin-right: 12px;
+            }
+        }
+    }
 }
