--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,1 +1,14 @@
-<div class="container">404 NOT FOUND</div>
+<div class="container">
+    <div class="table-page">
+        <header class="header">
+            <a href="/" class="logo">
+                <img src="/images/mai.svg" alt="МАИ" class="logo__image">
+                <span class="logo__title">Принтер 307</span>
+            </a>
+        </header>
+
+        <main class="table-block">
+            404 NOT FOUND
+        </main>
+    </div>
+</div>
