--- a/views/admin/admin-users-list.hbs
+++ b/views/admin/admin-users-list.hbs
@@ -16,34 +16,36 @@
             <a href="/admin">Назад</a>
             <h2 class="title">Пользователи:</h2>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Имя пользователя</th>
-                        <th>Фамилия</th>
-                        <th>Имя</th>
-                        <th>Активный</th>
-                        <th>Админ</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each users}}
-                    <tr>
-                        <td>{{this.id}}</td>
-                        <td><a href="/admin/users/{{this.id}}">{{this.username}}</a></td>
-                        <td>{{this.lastName}}</td>
-                        <td>{{this.firstName}}</td>
-                        <td>
-                            <input type="checkbox" name="" id="" {{#if this.isActive}}checked{{/if}} disabled>
-                        </td>
-                        <td>
-                            <input type="checkbox" name="" id="" {{#if this.isAdmin}}checked{{/if}} disabled>
-                        </td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
+            <div class="table-wrapper">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Имя пользователя</th>
+                            <th>Фамилия</th>
+                            <th>Имя</th>
+                            <th>Активный</th>
+                            <th>Админ</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each users}}
+                        <tr>
+                            <td>{{this.id}}</td>
+                            <td><a href="/admin/users/{{this.id}}">{{this.username}}</a></td>
+                            <td>{{this.lastName}}</td>
+                            <td>{{this.firstName}}</td>
+                            <td>
+                                <input type="checkbox" name="" id="" {{#if this.isActive}}checked{{/if}} disabled>
+                            </td>
+                            <td>
+                                <input type="checkbox" name="" id="" {{#if this.isAdmin}}checked{{/if}} disabled>
+                            </td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
         </main>
     </div>
 </div>
