--- a/views/main.hbs
+++ b/views/main.hbs
@@ -41,69 +41,75 @@
             <div>
                 <h2 class="title">Текущая очередь:</h2>
 
-                <table>
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Название файла</th>
-                            {{!-- <th>Напечатано страниц</th> --}}
-                            <th>Статус</th>
-                            {{!-- <th>Дата</th> --}}
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each orders}}
-                        <tr>
-                            <td>{{this.id}}</td>
-                            <td>
-                                <a href="/api/files/{{this.file.id}}/download">{{this.file.originalName}}</a>
-                            </td>
-                            {{!-- <td>{{this.pagesPrinted}}</td> --}}
-                            <td>{{this.status}}</td>
-                            {{!-- <td>{{this.createDate}}</td> --}}
-                            <td>
-                                <button type="button" data-id="{{this.id}}"
-                                    class="red-button button_w-auto cancel-printing-button"
-                                    style="margin: 0 auto;">Oтменить</button>
-                            </td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
+                <div class="table-wrapper">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Название файла</th>
+                                {{!-- <th>Напечатано страниц</th> --}}
+                                <th>Статус</th>
+                                {{!-- <th>Дата</th> --}}
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each orders}}
+                            <tr>
+                                <td>{{this.id}}</td>
+                                <td>
+                                    <a href="/api/files/{{this.file.id}}/download">{{this.file.originalName}}</a>
+                                </td>
+                                {{!-- <td>{{this.pagesPrinted}}</td> --}}
+                                <td>{{this.status}}</td>
+                                {{!-- <td>{{this.createDate}}</td> --}}
+                                <td>
+                                    {{#if this.canCanceled}}
+                                    <button type="button" data-id="{{this.id}}"
+                                        class="red-button button_w-auto cancel-printing-button"
+                                        style="margin: 0 auto;">Oтменить</button>
+                                    {{/if}}
+                                </td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
             {{else}}
             <div>
                 <h2 class="title">Мои файлы:</h2>
 
-                <table>
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Название файла</th>
-                            <th>Cтраниц</th>
-                            <th>Дата</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each files}}
-                        <tr>
-                            <td>{{this.id}}</td>
-                            <td>
-                                <a href="/api/files/{{this.id}}/download">{{this.originalName}}</a>
-                            </td>
-                            <td>{{this.pages}}</td>
-                            <td>{{this.createDate}}</td>
-                            <td>
-                                <button type="button" data-id="{{this.id}}"
-                                    class="main-button button_w-auto start-printing-button"
-                                    style="margin: 0 auto;">Напечатать</button>
-                            </td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
+                <div class="table-wrapper">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Название файла</th>
+                                <th>Cтраниц</th>
+                                <th>Дата</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each files}}
+                            <tr>
+                                <td>{{this.id}}</td>
+                                <td>
+                                    <a href="/api/files/{{this.id}}/download">{{this.originalName}}</a>
+                                </td>
+                                <td>{{this.pages}}</td>
+                                <td>{{this.createDate}}</td>
+                                <td>
+                                    <button type="button" data-id="{{this.id}}"
+                                        class="main-button button_w-auto start-printing-button"
+                                        style="margin: 0 auto;">Напечатать</button>
+                                </td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
             {{/if}}
 
